<resources>
    <string name="app_name">Table Tennis Network</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_the_language">Change the Language</string>
    <string name="add">Add</string>
    <string name="add_opponent">ADD OPPONENT</string>
    <string name="search">Search</string>
    <string name="add_match">Add Match</string>
    <string name="opponents">Opponents</string>
    <string name="you">You</string>
    <string name="opponent">Opponent</string>
    <string name="new_set">New Set</string>
    <string name="_1_set">1st Set</string>
    <string name="_2_set">2nd Set</string>
    <string name="_3_set">3rd Set</string>
    <string name="_4_set">4th Set</string>
    <string name="_5_set">5th Set</string>
    <string name="complete_the_match_or_save_to_edit_later">Complete the match or save to edit later</string>
    <string name="clear_image">Clear Image</string>
    <string name="total_matches">Total Matches</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="winning_percentage">Winning Percentage</string>
    <string name="DetailedStatistics">Detailed Statistics</string>
    <string name="AverageSetsWonPerMatch">Average Sets Won Per Match</string>
    <string name="WinningRatePerSet">Winning Rate Per Set</string>
    <string name="AveragePointsWonPerSet">Average Points Won Per Set</string>
    <string name="AveragePointsWonPerMatch">Average Points Won Per Match</string>
    <string name="TotalSetsPlayed">Total Sets Played</string>
    <string name="TotalPointsWon">Total Points Won</string>
    <string name="my_opponents">My Opponents</string>
    <string name="password">Password</string>
    <string name="IForgotMyPassword">I Forgot My Password</string>
    <string name="LogIn">Log In</string>
    <string name="NotamemberSignUp">Not a member? Sign Up!</string>
    <string name="main_image">Main Image</string>
    <string name="e_mail">E-mail</string>
    <string name="MyMatches">My Matches</string>
    <string name="FirstNameandLastName">First Name and Last Name</string>
    <string name="user_name">User Name</string>
    <string name="ChangePassword">Change Password</string>
    <string name="Settings">Settings</string>
    <string name="backgroundimageview">Background ImageView</string>
    <string name="settingimageview">Setting ImageView</string>
    <string name="PersonalInformation">Personal Information</string>
    <string name="Change">Change</string>
    <string name="Show">Show</string>
    <string name="Requests">Requests</string>
    <string name="add_opponent_">Add Opponent</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="AlreadyamemberLogIn">Already a member? Log In!</string>
    <string name="SupportandContact">Support and Contact</string>
    <string name="title">Title</string>
    <string name="ContentYouropinionssuggestionsandcomplaints">Content: Your opinions, suggestions, and complaints</string>
    <string name="submit">Submit</string>
    <string name="UpdatetheMatch">Update the Match</string>
    <string name="ChangeUsername">Change Username</string>
    <string name="newUsername">New Username</string>
    <string name="Delete">Delete</string>
    <string name="Accept">Accept</string>
    <string name="win_won">Win/Won</string>
    <string name="Withdraw">Withdraw</string>
    <string name="YourcompetitorlistisemptyYoushouldfirstaddacompetitorfromyourprofile">
        Your competitor list is empty. You should first add a competitor from your profile.
    </string>
    <string name="ok">OK</string>
    <string name="Pleaseselectacompetitor">Please select a competitor.</string>
    <string name="Youmustdeletethe3rdsetfirst">You must delete the 3rd set first.</string>
    <string name="Youmustdeletethe4rdsetfirst">You must delete the 4th set first.</string>
    <string name="Youmustdeletethe5rdsetfirst">You must delete the 5th set first.</string>
    <string name="Therearenomatchesplayedwiththeselectedcompetitor">
        There are no matches played with the selected competitor.
    </string>
    <string name="Enteryouremail">Enter your email</string>
    <string name="Enteryouremailandpassword">Enter your email and password.</string>
    <string name="IncomingRequests">Incoming Requests</string>
    <string name="SentRequests">Sent Requests</string>
    <string name="MyInformation">My Information</string>
    <string name="SharetheApplication">Share the Application</string>
    <string name="LogOut">Log Out</string>
    <string name="Irecommendtryingthisamazingapp">I recommend trying this amazing app!</string>
    <string name="Usernamealreadyexists">Username already exists.</string>
    <string name="Pleasefilloutallfieldscompletely">Please fill out all fields completely.</string>
    <string name="MyStatistics">My Statistics</string>
    <string name="ComparewithCompetitor">Compare with Competitor</string>
    <string name="Yourmessagehasbeensuccessfullyreceived">Your message has been successfully received.</string>
    <string name="Titleandcontentcannotbeempty">Title and content cannot be empty.</string>
    <string name="Usernamehasbeensuccessfullyupdated">Username has been successfully updated.</string>
    <string name="Usernamecannotbeempty">Username cannot be empty.</string>
    <string name="ChangeFirstNameandLastName">Change First Name and Last Name</string>
    <string name="NewFirstNameandLastName">New First Name and Last Name</string>
    <string name="FirstNameandLastNamehavebeensuccessfullyupdated">
        First Name and Last Name have been successfully updated.
    </string>
    <string name="FirstNameandLastNamecannotbeempty">First Name and Last Name cannot be empty.</string>
    <string name="Matchhasbeensuccessfullysaved">Match has been successfully saved.</string>
    <string name="Thematchcouldnotbesaved">The match could not be saved.</string>
    <string name="Matchhasbeensuccessfullyupdated">Match has been successfully updated.</string>
    <string name="Thematchcouldnotbeupdated">The match could not be updated.</string>
    <string name="Matchhasbeensuccessfullydeleted">Match has been successfully deleted.</string>
    <string name="Anerroroccurredwhiledeletingthematch">An error occurred while deleting the match.</string>
    <string name="Emailhasbeensentpleaseverifyyouraccount">Email has been sent, please verify your account.</string>
    <string name="Emailverificationfailed">Email verification failed.</string>
    <string name="Passwordresetemailhasbeensent">Password reset email has been sent.</string>
    <string name="Pleaseverifyyouremailaddress">Please verify your email address.</string>
    <string name="Wouldyouliketheverificationemailtoberesent">Do you want the verification email to be resent?</string>
    <string name="Pressagaintoexit">Press again to exit.</string>
    <string name="password_reset_email_sent">Password reset email sent.</string>
    <string name="password_reset_email_failed">Failed to send password reset email.</string>
    <string name="homePage">Home</string>
    <string name="Statistics">Statistics</string>
    <string name="Profile">Profile</string>
    <string name="Matchdetail">Match Detail</string>
    <string name="Confirmationstatus">Confirmation status</string>
    <string name="Confirm_match">Confirm match</string>
    <string name="Confirmed">Confirmed</string>
    <string name="Pending">Pending</string>
    <string name="Delete_match">Delete Match</string>
    <string name="Confirmmatchdeletion">Confirm match deletion</string>
    <string name="Lastupdatedate">Last update date</string>
    <string name="match_cannot_be_updated">The match cannot be updated because it has been confirmed. If you think there is a mistake, please delete the match and save it again.</string>
    <string name="GotoMatchDeletionPage">Go to Match Deletion Page</string>
    <string name="MatchConfirmed">Match Confirmed</string>
    <string name="Yourmatchdeletionconfirmationhasbeenreceived">Your match deletion confirmation has been received.</string>





</resources>
